Our Work box subtitle not italic on Safari. Not clear why is italic on Chrome. Set to italic fixes on Safari

--- a/css/custom.css
+++ b/css/custom.css
@@ -11,7 +11,8 @@
 }
 
 .dark .feature-box h3 span.subtitle {
-	font-family: 'Crete Round';
+	font-family: 'Crete Round', serif;
+	font-style: italic;
 }
 
 .feature-box h3 {
